# data-quality-audit-cli

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: tests.yml
dq_audit/: __init__.py  __main__.py  audit.py  cli.py  io.py  report.py  rules.py
examples/: customer_rules.yaml  dirty_customers.csv
tests/: test_audit.py  test_cli.py  test_rules.py
