[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-audit-cli"
version = "0.1.0"
description = "CLI tool for auditing messy CSV and Parquet datasets with Polars, validation rules, and HTML/Markdown reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
dq-audit = "dq_audit.cli:main"

[tool.setuptools.packages.find]
include = ["dq_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
